@@ -12,64 +12,6 @@
 		<version>0.0.1</version>
 	</parent>
 
-	<build>
-		<plugins>
-			<!--
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.1</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-					<excludes>
-						<exclude>**/.svn/**</exclude>
-					</excludes>
-					<encoding>UTF-8</encoding>
-					<showDeprecation>true</showDeprecation>
-					<fork>false</fork>
-					<showWarnings>${java.compiler.showWarnings}</showWarnings>
-					<debug>${java.compiler.debug}</debug>
-					<optimize>${java.compiler.optimize}</optimize>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
-					<additionalClasspathElements>
-						<additionalClasspathElement>${project.build.sourceDirectory}</additionalClasspathElement>
-						<additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
-					</additionalClasspathElements>
-					<useManifestOnlyJar>false</useManifestOnlyJar>
-					<forkMode>always</forkMode>
-					<systemProperties>
-						<property>
-							<name>gwt.args</name>
-							<value>-out target/gwt-test</value>
-						</property>
-						<property>
-							<name>gwt.persistentunitcache</name>
-							<value>false</value>
-						</property>
-					</systemProperties>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			-->
-		</plugins>
-	</build>
 	<repositories>
 		<repository>
 			<id>net.sf.video4j.gwt.release</id>
@@ -92,6 +34,7 @@
 			</snapshots>
 		</repository>
 	</repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.google.gwt</groupId>
@@ -106,7 +49,6 @@
 		<dependency>
 			<groupId>com.google.gwt.inject</groupId>
 			<artifactId>gin</artifactId>
-<!-- 			<classifier /> -->
 		</dependency>
 	</dependencies>
 
